--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7569,7 +7569,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 600px;
+  width: 50%;
+  max-height: 65%;
 }
 
 .map-modal {
