--- a/src/views/screens/home/cookie_policy.njk
+++ b/src/views/screens/home/cookie_policy.njk
@@ -78,7 +78,7 @@
           </tr>
           <tr>
             <td>ncea-cookie-acceptance-level</td>
-            <td>On the Natural Capital Search service, this field indicates whether the user wants non-essential cookies to be used. The answer is True if they accept them, False if they reject them</td>
+            <td>On the find natural capital data service, this field indicates whether the user wants non-essential cookies to be used. The answer is True if they accept them, False if they reject them</td>
             <td>1 year</td>
           </tr>
         </tbody>
@@ -86,7 +86,7 @@
       <h2 class="govuk-heading-s ncea-static-page__heading-s govuk-!-margin-top-4">Non-essential cookies</h2>
       <section class="ncea-static-page__content">
         <p class="ncea-static-page__content-item">We are continually working on improving the services we provide you with. To support this work, we need to understand how users navigate through, and use our pages and services.</p>
-        <p class="ncea-static-page__content-item">The following cookies, whilst not essential to the running of the core Natural Capital Search Service functions, are needed for Google Analytics to provide us with statistics on how you use our platform, so we can improve it based on user experiences. These cookies collect information about:</p>
+        <p class="ncea-static-page__content-item">The following cookies, whilst not essential to the running of the core find natural capital data service functions, are needed for Google Analytics to provide us with statistics on how you use our platform, so we can improve it based on user experiences. These cookies collect information about:</p>
       </section>
       <ol class="govuk-!-margin-left-0 govuk-!-padding-left-5">
         <li class="ncea-static-page__content-item">Technical problems preventing you from using the service</li>
