--- a/src/views/screens/home/help.njk
+++ b/src/views/screens/home/help.njk
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-xl ncea-static-page__heading-m  govuk-!-margin-bottom-4">Help</h1>
-      <p class="govuk-body-m">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the Natural Capital Search Service.</p>
+      <p class="govuk-body-m">Contact the Natural Capital and Ecosystem Assessment (NCEA) programme for help with the find natural capital data service.</p>
       <h1 class="govuk-heading-s">Email</h1>
       <p class="govuk-body-m">
         <a class="govuk-link help-link" href="mailto: NCEAemail@email.com">NCEAemail@email.com</a>
