--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -39,6 +39,11 @@
               Reset study period
             </a>
           {% endif %}
+          {% if filterInstance === 'map_results' %}
+            <a href="javascript:;" id="reset-map-study-period-filter" class="govuk-link defra-reset-study-period--link">
+              Reset study period
+            </a>
+          {% endif %}
           <div class="govuk-!-margin-top-4 govuk-section-break--visible"></div>
         </div>
       </section>
