--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -12,7 +12,7 @@
             </span>
           {% else %}
             {{govukTag({
-              text: "NOT PROVIDED",
+              text: "UNAVAILABLE",
               classes: "govuk-tag--grey tab-content-value__not-provided"
             })}}
           {% endif %}
