Features/407210 integrate classifier microservice (#104)
* feat: GTM tracking

* Dynamic list of natural capital theme

* Removing commented code

* Classifier changes for Level 1 and Level 2

* Fixing the url path for skip question

* Fixing the url params

* Fixed breadcrumb and backlink

* Elastic searc query fixes

* Microservice integration

* Microservice integration for classifiers

* Classifier ui implementation

* Classifier integration

* fix: Unit test case

* fix: Unit test cases

* fix: Missing file

* fix: More unit test cases for coverage

* fix: Sonar feedback

* Addressed PR comments

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -8257,6 +8257,10 @@
   display: block;
 }
 
+.govuk-checkboxes__label {
+  padding: 7px 30px;
+}
+
 .defra-reset-study-period--link {
   font-family: "GDS Transport", arial, sans-serif;
   font-size: 1rem;
