--- a/src/views/screens/mdc/mdc.njk
+++ b/src/views/screens/mdc/mdc.njk
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<xs:schema targetNamespace="{{webDomain}}/assets/xml-schema/mdc" elementFormDefault="qualified" version="0.1" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mdc="{{webDomain}}/assets/xml-schema/mdc">
+<xs:schema targetNamespace="{{webDomain}}mdc" elementFormDefault="qualified" version="0.1" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:mdc="{{webDomain}}mdc">
 	<!-- ================================= Annotation ================================ -->
 	<xs:annotation>
 		<xs:documentation>This file was generated from ISO TC/211 UML class diagrams == 01-26-2005 12:40:04 ====== </xs:documentation>
