Fix/415842 improved see results on a map button (#116)
* feat: GTM tracking

* Map button changes

* Improved 'See results on a map' Button

* Improved 'See results on a map' Button

* Navigation Between Map and Data Details

* Css fixes

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7538,10 +7538,10 @@
   background-size: contain;
 }
 
-.map-container-button {
-  top: 50.5px;
+#map-results-block a {
   left: 159.5px;
   padding: 7px 12px 6px 12px;
+  top: 50.5px;
 }
 
 .no-script-container {
