Feature/407209 classifier search query (#107)
* feat: GTM tracking

* Dynamic list of natural capital theme

* Removing commented code

* Classifier changes for Level 1 and Level 2

* Fixing the url path for skip question

* Fixing the url params

* Fixed breadcrumb and backlink

* Elastic searc query fixes

* Microservice integration

* Microservice integration for classifiers

* query changes for classifier

* query changes for classifier

* chnaged classifier_template

* integrated query

* Query integrstion  for classifier

* Resolved todays date

* resolved issues

* Modified the failed test cases

* Modified the failed test cases

* Modified the failed test cases

* Resolved sonar query

* Resolved sonar query

* Resolved sonar query

* Resolved sonar query

* Resolved sonar query

* Resolved pr comment

* Resolved issue

* changed skip path

* changed skip path

* changed skip path

* resolved issue

* resolved issue

* resolved issue

* resolved pr comments

* aaded journey parameter

* resolved pr comments

* sonar issue

* sonar issue

* sonar issue

* sonar issue

* sonar issue

* sonar issue

* sonar issue

* sonar issue

* sonar issue

---------

Co-authored-by: Karthigayayini Ramachandran <karthigayayini.r@cognizant.com>
Co-authored-by: Priti Bandewar <priti.bandewar@whitbread.com>

--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -22,14 +22,15 @@
     ]
   }) }}
   {% endif %}
-  
+
 {% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
     {% include "partials/results_count/template.njk" %}
     <form method="GET" id="{{formId}}" action="{% if nextLevel > 3 %} {{skipPath}} {% else %} {{guidedClassifierSearchPath}} {% endif %}" data-do-browser-storage>
-      <input type="hidden" name="level" value="{{nextLevel}}" />
+     <input type="hidden" name="jry" value="{{journey}}" />
+     <input type="hidden" name="level" value="{% if nextLevel > 3 %}3{% else %}{{ nextLevel }}{% endif %}" />
       <div class="govuk-grid-column-full govuk-!-padding-top-6">
         {% for classify  in classifierItems %}
           {% set checkboxItems = [] %}
@@ -72,7 +73,7 @@
             }) }}
         {% endfor %}
         <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-6 geography-buttons">
-          <div class="govuk-button-group govuk-grid-column-one-half">          
+          <div class="govuk-button-group govuk-grid-column-one-half">
           {{ govukButton({ text: "Skip", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: skipPath, attributes: {
             'data-do-storage-skip': ''
           } }) }}
