--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -116,7 +116,7 @@
           {{ govukButton({ text: "Previous question", classes: "govuk-button--secondary", attributes: {
             'data-do-previous-page': ''
           } }) }}
-          {{ govukButton({ text: "Restart questionnaire search", classes: "govuk-button--secondary", href: dateSearchPath, attributes: {
+          {{ govukButton({ text: "Restart questionnaire search", classes: "govuk-button--secondary", href: routes.guidedSearch+'?level=1', attributes: {
             'data-do-storage-reset': ''
           } }) }}
         </div>
