--- a/src/views/screens/guided_search/date_questionnaire.njk
+++ b/src/views/screens/guided_search/date_questionnaire.njk
@@ -34,15 +34,13 @@
             ]
         }) }}
 
-        <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-6 geography-buttons">
-          <div class="govuk-grid-column-one-half geography-buttons__left">
-            &nbsp;
-          </div>
-          <div class="govuk-grid-column-one-half govuk-button-group govuk-!-margin-bottom-0 geography-buttons__right">
-            {{ govukButton({ text: "Skip question", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: skipPath, attributes: {
+         <div class="govuk-grid-row  govuk-!-margin-top-4 govuk-!-margin-bottom-6 geography-buttons">
+
+          <div class="govuk-button-group govuk-grid-column-one-half">
+            {{ govukButton({ text: "Skip", classes: "govuk-button--secondary govuk-!-margin-bottom-0", href: skipPath, attributes: {
               'data-do-storage-skip': ''
             } }) }}
-            {{ govukButton({ text: "Next question", classes: "govuk-!-margin-bottom-0 govuk-!-margin-right-0", attributes: {
+            {{ govukButton({ text: "Next", classes: "govuk-!-margin-bottom-0 govuk-!-margin-right-0", attributes: {
               'data-to-disable': '', 'data-next-question': ''
             } }) }}
           </div>
