Features/421093 Fixes for classifier UI screen (#119)
* feat: GTM tracking

* Map button changes

* UI Fixes - for classifier label and description positioning

* Redirection fix when classifier response is empty

* Test case fixes for classifier page title

* fix: Sonarcloud coverage

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7535,7 +7535,7 @@
   border-width: 2px;
   border-color: #002D18;
   border-style: solid;
-  background-size: contain;
+  background-size: cover;
 }
 
 #map-results-block a {
@@ -8278,7 +8278,7 @@
 }
 
 .govuk-checkboxes__label {
-  padding: 7px 30px;
+  padding: 7px 25px;
 }
 
 .defra-reset-study-period--link {
