--- a/src/views/partials/go_to_resource/modal.njk
+++ b/src/views/partials/go_to_resource/modal.njk
@@ -6,8 +6,8 @@
 
 {% block modalContent %}
   <div class='data-container'>
-    <h1 class='govuk-heading-l data-container__heading-l govuk-!-margin-bottom-0'>You are about to leave the find natural capital data service</h1>
-    <p class='govuk-body-l data-container__body-l govuk-!-margin-bottom-0'>You are following a link to an external catalogue managed by<br/><span id='resource_party'></span></p>
+    <h1 class='govuk-heading-l data-container__heading-l govuk-!-margin-bottom-0'>You are about to leave Find natural capital data</h1>
+    <p class='govuk-body-l data-container__body-l govuk-!-margin-bottom-0'>You are following a link to an external catalogue managed by:<br/><span id='resource_party'></span></p>
     <div class='govuk-button-group data-container__button-group govuk-!-margin-bottom-0'>
       {{ govukButton({
         text: 'Cancel',
