--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -64,7 +64,8 @@
     {{ govukHeader({
       homepageUrl: "https://www.gov.uk/",
       serviceName: serviceName,
-      serviceUrl: routes.homePage
+      serviceUrl: routes.homePage,
+      useTudorCrown: true
     }) }}
   </header>
 {% endblock %}
