--- a/src/assets/sass/components/_modal.scss
+++ b/src/assets/sass/components/_modal.scss
@@ -30,12 +30,12 @@
 
 .skip-questionnaire-modal {
   z-index: 1002;
-  background-color: #505a5f;
+  background-color: govuk-colour("dark-grey");
   padding: 40px 20px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 630px;
   max-height: 65%;
 }
 
