--- a/src/views/partials/results_count/template.njk
+++ b/src/views/partials/results_count/template.njk
@@ -1,3 +1,4 @@
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 <div class="govuk-grid-row">
      <div class="govuk-grid-column-full">
           {% if count >0 %}
@@ -5,14 +6,24 @@
                     <a href="{{ resultsPath }}" class="govuk-link count-block-link">
                          Click to see
                          {% if count > 10000 %}
-                             first 10000 of {{ count }}
+                              first 10000 of {{ count }}
                          {% else %}
                               {{ count }}
                          {% endif %}
                          relevant results from your previous selection
                     </a>
-
-                    <div class='search-result__parameter-value govuk-!-margin-top-4'>Select additional categories to narrow down your results</div>
+                    <div class='search-result__parameter-value govuk-!-margin-top-4'>Select additional categories to narrow down your
+                         results</div>
+               </div>
+               <div id='errorBlock' style="display:none;">
+                    {{ govukErrorSummary({
+                       titleText: "There is a problem",
+                       errorList: [
+                      {
+                        text: "You must make a selection or click skip to continue"
+                      }
+                      ]
+                    }) }}
                </div>
                <div class="govuk-section-break--visible"></div>
           {% endif %}
