--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -1,5 +1,142 @@
 {% from "govuk/components/select/macro.njk" import govukSelect %}
+{% from "govuk/components/date-input/macro.njk" import govukDateInput %}
+{% from "govuk/components/input/macro.njk" import govukInput %}
 
+<form autocomplete="off">
+  <section>
+    <div class="govuk-checkboxes govuk-checkboxes--small">
+      <div class="govuk-checkboxes__item" data-module="govuk-checkboxes">
+        <input class="govuk-checkboxes__input" id="ncea-metadata-{{filterInstance}}" type="checkbox">
+        <label class="govuk-label govuk-checkboxes__label" for="ncea-metadata-{{filterInstance}}">
+          NCEA Metadata Only
+        </label>
+      </div>
+    </div>
+
+    <div class="govuk-!-margin-top-4 govuk-section-break--visible"></div>
+
+    <div>
+      {% for category in dspFilterOptions %}
+        <div class="filter-options__container">
+          {# they should start hidden #}
+          <label for="filters-{{category.value}}-accordion-toggle-{{filterInstance}}" class="filter-options__accordion" data-category-{{filterInstance}}="{{category.value}}">
+            <input type="checkbox" id="filters-{{category.value}}-accordion-toggle-{{filterInstance}}" class="filter-options__accordion-toggle" />
+            <svg id="filters-{{category.value}}-accordion-icon-{{filterInstance}}" stroke="currentColor" fill="currentColor" viewBox="0 0 512 512" height="20px" width="20px" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="m112 328 144-144 144 144"></path></svg>
+            <span>
+              {{category.name}}
+            </span>
+          </label>
+          <fieldset class="filter-options__filters filter-options__accordion-child filter-options__filters--hidden govuk-fieldset" disabled id="filters-{{category.value}}-filters-{{filterInstance}}">
+            <legend class="filter-options__legend">
+              <h3>
+                {{category.name}} Filters
+              </h3>
+            </legend>
+            <div class="govuk-form-group">
+              <div class="govuk-checkboxes govuk-checkboxes--small">
+                <div class="govuk-checkboxes__item" data-module="govuk-checkboxes">
+                  <input class="govuk-checkboxes__input" id="filters-{{category.value}}-all" type="checkbox">
+                  <label class="govuk-label govuk-checkboxes__label" for="filters-{{category.value}}-all">
+                    All
+                  </label>
+                </div>
+
+                {% for filter in category.filters %}
+                  <div class="govuk-checkboxes__item" data-module="govuk-checkboxes">
+                    <input class="govuk-checkboxes__input" id="filters-{{filter.value}}-filter-{{filterInstance}}" name="{{filter.name}}" type="checkbox" value="{{filter.value}}">
+                    <label class="govuk-label govuk-checkboxes__label" for="filters-{{filter.value}}-filter-{{filterInstance}}">
+                      {{filter.name}}
+                    </label>
+                  </div>
+                {% endfor %}
+              </div>
+          </fieldset>
+        </div>
+      {% endfor %}
+    </div>
+
+    <div class="filter-options__container">
+      <label for="filters-date-accordion-toggle-{{filterInstance}}" class="filter-options__accordion" data-category-{{filterInstance}}="date">
+        <input type="checkbox" id="filters-date-accordion-toggle-{{filterInstance}}" class="filter-options__accordion-toggle" />
+        <svg id="filters-date-accordion-icon-{{filterInstance}}" stroke="currentColor" fill="currentColor" viewBox="0 0 512 512" height="20px" width="20px" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="m112 328 144-144 144 144"></path></svg>
+        <span>
+          Date last updated
+        </span>
+      </label>
+      <div class="filter-options__filters--hidden filter-options__accordion-child" id="filters-date-filters-{{filterInstance}}">
+        {{ govukDateInput({
+          id: "date-before-"+filterInstance,
+          fieldset: {
+            legend: {
+              text: "Updated after",
+              classes: "govuk-fieldset__legend--s"
+            }
+          },
+          hint: {
+            text: "For example, 27 3 2007"
+          }
+        }) }}
+
+        {{ govukDateInput({
+          id: "date-after-"+filterInstance,
+          fieldset: {
+            legend: {
+              text: "Updated before",
+              classes: "govuk-fieldset__legend--s"
+            }
+          },
+          hint: {
+            text: "For example, 27 3 2007"
+          }
+        }) }}
+      </div>
+    </div>
+    <div class="filter-options__container">
+      <label for="filters-licence-accordion-toggle-{{filterInstance}}" class="filter-options__accordion" data-category-{{filterInstance}}="licence">
+        <input type="checkbox" id="filters-licence-accordion-toggle-{{filterInstance}}" class="filter-options__accordion-toggle" />
+        <svg id="filters-licence-accordion-icon-{{filterInstance}}" stroke="currentColor" fill="currentColor" viewBox="0 0 512 512" height="20px" width="20px" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="m112 328 144-144 144 144"></path></svg>
+        <span>
+          Licence
+        </span>
+      </label>
+      <div class="filter-options__filters--hidden filter-options__accordion-child" id="filters-licence-filters-{{filterInstance}}">
+        {{ govukInput({
+          id: 'licence-'+filterInstance
+        }) }}
+      </div>
+    </div>
+    <div class="filter-options__container">
+      <label for="filters-keywords-accordion-toggle-{{filterInstance}}" class="filter-options__accordion" data-category-{{filterInstance}}="keywords">
+        <input type="checkbox" id="filters-keywords-accordion-toggle-{{filterInstance}}" class="filter-options__accordion-toggle" />
+        <svg id="filters-keywords-accordion-icon-{{filterInstance}}" stroke="currentColor" fill="currentColor" viewBox="0 0 512 512" height="20px" width="20px" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="m112 328 144-144 144 144"></path></svg>
+        <span>
+          Keywords
+        </span>
+      </label>
+      <div class="filter-options__filters--hidden filter-options__accordion-child" id="filters-keywords-filters-{{filterInstance}}">
+        {{ govukInput({
+          id: 'keywords-'+filterInstance
+        }) }}
+      </div>
+    </div>
+
+    <div class="govuk-!-margin-top-4 govuk-section-break--visible"></div>
+
+    <div class="govuk-checkboxes govuk-checkboxes--small">
+      <div class="govuk-checkboxes__item" data-module="govuk-checkboxes">
+        <input class="govuk-checkboxes__input" id="retired-archived-{{filterInstance}}" type="checkbox">
+        <label class="govuk-label govuk-checkboxes__label" for="retired-archived-{{filterInstance}}">
+          Include Retired & Archived records
+        </label>
+      </div>
+    </div>
+
+    <div class="govuk-!-margin-top-4 govuk-section-break--visible"></div>
+
+    <a href="#" class="govuk-link">Reset Filters</a>
+  </section>
+</form>
+  
 {% if filterOptions.start_year_range and filterOptions.start_year_range.length > 0 and filterOptions.to_year_range and filterOptions.to_year_range.length > 0 %}
   <form action="{{filterStudyPeriodPath}}" id="study_period_filter-{{filterInstance}}" method="post">
     <section class="defra-filter-section">
@@ -89,4 +226,3 @@
       </section>
     </form>
   {% endif %}
-
